--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "dependencies": {
     "express": "~3.4.4",
     "ejs": "~2.3.1",
-    "mongojs": "~0.18.2"
+    "mongojs": "~0.18.2",
+    "qr-image": "~3.1.0"
   },
   "devDependencies": {},
   "bundleDependencies": [],
